[package]
name = "actix-jwks"
version ="0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Decode jwt with jwks from actix request"
repository = "https://github.com/timada-org/actix-jwks"
homepage = "https://docs.rs/actix-jwks"
documentation = "https://docs.rs/actix-jwks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = { version = "3.0.1", features = ["rustls"] }
actix-web = "4.2.1"
josekit = "0.8.1"
parking_lot = "0.12.1"
futures-util = "0.3.25"
serde = "1.0.147"
serde_json = "1.0.87"
thiserror = "1.0.37"
tracing = "0.1.37"
