[package]
name = "actix-jwks"
version ="0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Decode jwt with jwks from actix request"
repository = "https://github.com/timada-org/actix-jwks"
homepage = "https://docs.rs/actix-jwks"
documentation = "https://docs.rs/actix-jwks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
jwks_client_rs = "0.4.0"
futures-util = "0.3.26"
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
tracing = "0.1.37"
reqwest = { version = "0.11.14", features = ["json"] }
