[package]
name = "actix-jwks"
version ="0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Decode jwt with jwks from actix request"
repository = "https://github.com/timada-org/actix-jwks"
homepage = "https://docs.rs/actix-jwks"
documentation = "https://docs.rs/actix-jwks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
futures-util = "0.3.26"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
thiserror = "1.0.38"
tracing = "0.1.37"
base64 = "^0.21.0"
reqwest = {version = "0.11.0", default-features = false, features = ["json", "rustls-tls", "rustls"] }
regex = "1.7.1"
ring = "^0.16.0"
tokio = {version = "1.25.0", features = ["sync"]}

[dev-dependencies]
tokio = {version = "1.25.0", features = ["macros", "rt-multi-thread"]}
tokio-test = "0.4"
